# OpenGateRAG

./: .dockerignore  .env.example  .gitignore  README.md  compose.example.yml  config.example.yml  pyproject.toml
.github/: .trivyignore  PULL_REQUEST_TEMPLATE.md  codeql.config.yml  semgrep-rules.yml
.github/badges/: coverage.json
.github/tests/: compose.yml  config.opengatellm.yml  config.yml  setup_tests.sh  start_services.sh
.github/tests/e2e/: conftest.py  test_collections.py  test_documents.py  test_search.py
.github/workflows/: build_and_deploy.yml  run_tests.yml  semgrep.yml  trivy-scan.yml
opengaterag/api/: Dockerfile  app.py  main.py
opengaterag/api/endpoints/: collections.py  documents.py  search.py
opengaterag/api/helpers/: _accesscontroller.py  _documentmanager.py  _elasticsearchvectorstore.py  _parsermanager.py
opengaterag/api/schemas/: chunks.py  collections.py  core.py  documents.py  search.py  usage.py
opengaterag/api/tests/unit/: test_accesscontroller.py  test_documentmanager.py  test_elasticsearchvectorstore.py
opengaterag/api/utils/: configuration.py  context.py  dependencies.py  exceptions.py  lifespan.py  logging.py  sql.py  variables.py
opengaterag/docs/: app.py  openapi.py
scripts/: create_api_key.py  startup_api.sh
