[project]
name = "opengaterag"
version = "0.1.0"
description = "OpenGateRAG project"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "uvicorn==0.41.0",
    "fastapi==0.135.1",
    "gunicorn==25.1.0",
    "httpx==0.28.1",
    "sentry-sdk[fastapi]==2.53.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "langchain-text-splitters==1.1.1",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy-utils==0.42.1",
    "sqlalchemy[asyncio]==2.0.47",
    "elasticsearch[async]==9.3.0",
    "psycopg2-binary==2.9.11",
    "html-to-markdown==2.29.0",
    "pymupdf4llm==0.3.4",
    "PyMuPDF==1.27.1",
    "pycountry==26.2.16",
    "python-multipart==0.0.27",
    "asyncpg==0.31.0",
    "tiktoken==0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = [
    "**/alembic",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "F403",  # import * 
    "F841",  # never used variables
    "E501",  # line too long
    "N806",  # force lowercase
    "UP031", # format specifiers instead of percent format
    "W291",  # trailing whitespace
    "N805",  # first argument of a class method call is self
    "N815",  # mixed case variable name
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["opengaterag"]
forced-separate = ["tests"]

[tool.ruff.lint.isort.sections]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    # Ignore warnings from external libraries
    "ignore:builtin type Swig.*:DeprecationWarning",
    # factory_boy doesn't fully support async SQLAlchemy sessions
    "ignore:coroutine 'AsyncSession.flush' was never awaited:RuntimeWarning",
]
